--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3,7 +3,19 @@ en:
     messages:
       taken_in_past: 'was used previously.'
       equal_to_current_password: 'must be different than the current password.'
-      password_format: 'must contain big, small letters and digits'
+      complexity:
+        digit:
+          one: must contain at least one numeral
+          other: must contain at least %{count} numerals
+        lower:
+          one: must contain at least one lower-case letter
+          other: must contain at least %{count} lower-case letters
+        punct:
+          one: must contain at least one punctuation mark or symbol
+          other: must contain at least %{count} puncutation marks or symbols
+        upper:
+          one: must contain at least one upper-case letter
+          other: must contain at least %{count} upper-case letters
   devise:
     invalid_captcha: 'The captcha input was invalid.'
     invalid_security_question: 'The security question answer was invalid.'
